--- a/style.css
+++ b/style.css
@@ -11,25 +11,37 @@ body{
     min-height: 100vh;
     background: linear-gradient(#ccfbff, #ef96c5) no-repeat ;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    overflow: hidden;
 }
 .clock {
     position: relative;
     width: 350px;
     height: 350px;
-    background: rgba( 255, 255, 255, 0.8);
-    border: 5px solid #000;
+    border: 5px solid #fff;
     border-radius: 50%;
+    box-shadow: 5px 5px 60px;
 }
-
+.clock img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    border-radius: 50%;
+    opacity: 0.6;
+    overflow: hidden;
+}
 .clock .number{
-    --rotation: 0;
+    font-size: 1.3rem;
+    font-weight: 900;
+    --rotation: 0deg;
     position: absolute;
     height: 100%;
     width: 100%;
     text-align: center;
-    color: rgb(91, 0, 236);
-    /* background: #000; */
-    /* background: #fff; */
     transform: rotate(var(--rotation));
 }
 .clock .number1 {
@@ -67,11 +79,44 @@ body{
 }
 
 .clock .hand {
+    --rotation: 0;
     position: absolute;
     bottom: 50%;
     left: 50%;
+    border: 1px solid #fff;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    z-index: 10;
+    transform-origin: bottom;
+    transform: translateX(-50%) rotate(calc(var(--rotation) * 1deg));
+}
+
+.clock::after {
+    content: '';
+    position: absolute;
+    background: #000;
+    z-index: 11;
+    width: 15px;
+    height: 15px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+}
+
+.clock .hand.second {
+    width: 3px;
+    height: 42%;
+    background: rgb(101, 219, 255);
+}
+.clock .hand.minute {
+    width: 7px;
+    height: 37%;
+    background: #000;
+}
+.clock .hand.hour {
     width: 10px;
-    height: 40%;
+    height: 25%;
     background: #000;
 }
 
